Add live market data dependencies and minimal database for deployment
- Updated requirements.txt with proper dependency ordering (numpy->scipy->nselib)
- Added jugaad-data (0.29) and nselib (1.9) for live NSE data
- Updated .gitignore to exclude large DBs but include minimal starter DB
- Added create_minimal_db.py helper script
- Minor server.py formatting cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,19 @@ App/scriptsrebuild/
 App/tests/
 App/docker-compose.yml
 App/start_app.bat
-# Allow minimal starter database (small file)
+
+# ============================================
+# DATABASE FILES
+# ============================================
+
+# Exclude LARGE production databases (1GB+)
+App/database/stock_market_new.db
+App/database/stock_market_backup_*.db
+
+# EXCEPTION: Include minimal starter database (small, needed for deployment)
 !App/database/stock_market_minimal.db
+
+# Alternative pattern (achieves the same thing):
+# If above doesn't work, comment it out and use this instead:
+# App/database/*.db
+# !App/database/stock_market_minimal.db
