--- a/App/api/Dockerfile
+++ b/App/api/Dockerfile
@@ -2,6 +2,23 @@ FROM python:3.11-slim
 
 WORKDIR /app/App/api
 
+# Install system dependencies for TA-Lib and scientific packages
+RUN apt-get update && apt-get install -y \
+    build-essential \
+    wget \
+    tar \
+    && rm -rf /var/lib/apt/lists/*
+
+# Download and compile TA-Lib C library
+RUN wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz && \
+    tar -xvzf ta-lib-0.4.0-src.tar.gz && \
+    cd ta-lib && \
+    ./configure --prefix=/usr && \
+    make && \
+    make install && \
+    cd .. && \
+    rm -rf ta-lib ta-lib-0.4.0-src.tar.gz
+
 COPY App/api/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
