--- a/App/api/Dockerfile
+++ b/App/api/Dockerfile
@@ -1,35 +1,26 @@
+# --------------------------------------------------------------
+# Base image
 FROM python:3.11-slim
 
+# --------------------------------------------------------------
+# Working directory (the API lives under App/api)
 WORKDIR /app/App/api
 
-# Install system dependencies for TA-Lib and scientific packages
+# --------------------------------------------------------------
+# System dependencies
+#   - build-essential, wget, tar : needed to compile TA‑Lib
+#   - git                         : required for pip‑installing git+ URLs
+#   - curl                        : used by the health‑check
 RUN apt-get update && apt-get install -y \
     build-essential \
     wget \
     tar \
+    git \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Download and compile TA-Lib C library
-RUN wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz && \
-    tar -xvzf ta-lib-0.4.0-src.tar.gz && \
-    cd ta-lib && \
-    ./configure --prefix=/usr && \
-    make && \
-    make install && \
-    cd .. && \
-    rm -rf ta-lib ta-lib-0.4.0-src.tar.gz
-FROM python:3.11-slim
-
-WORKDIR /app/App/api
-
-# Install system dependencies for TA-Lib and scientific packages
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    wget \
-    tar \
-    && rm -rf /var/lib/apt/lists/*
-
-# Download and compile TA-Lib C library
+# --------------------------------------------------------------
+# Compile TA‑Lib from source (the official C library)
 RUN wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz && \
     tar -xvzf ta-lib-0.4.0-src.tar.gz && \
     cd ta-lib && \
@@ -39,16 +30,24 @@ RUN wget http://prdownloads.sourceforge.net/ta-lib/ta-lib-0.4.0-src.tar.gz && \
     cd .. && \
     rm -rf ta-lib ta-lib-0.4.0-src.tar.gz
 
+# --------------------------------------------------------------
+# Install Python dependencies
 COPY App/api/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+# --------------------------------------------------------------
+# Copy the whole project (so the API can import shared code)
 COPY . /app
 
-RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
-
+# --------------------------------------------------------------
+# Expose the FastAPI port
 EXPOSE 8000
 
+# --------------------------------------------------------------
+# Health‑check (makes the container report “healthy” to Docker)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
   CMD curl -f http://localhost:8000/health || exit 1
 
+# --------------------------------------------------------------
+# Start the server (the “user‑first” command you wanted)
 CMD ["python", "-m", "uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000", "--log-level", "info", "--access-log"]
