--- a/App/.dockerignore
+++ b/App/.dockerignore
@@ -1,3 +1,3 @@
 # Exclude the large SQLite database from Docker build
-database/stock_market_new.db
-database/CF-CA-*.csv
+App/database/stock_market_new.db
+App/database/CF-CA-*.csv
