Enhance LLM reliability, debug indicators, and improve data fetching
- Implement anti-hallucination measures in LLM client and function declarations.

- Add debug logging and reproduction script for indicator calculation issues.

- Update UniversalDataFetcher and TickerResolver for better accuracy.

- Fix frontend rendering issues in UniversalRenderer.

- Update gitignore and daily update script.

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ App/src/utils/
 # ============================================
 App/database/namechange.csv
 App/database/symbolchange.csv
+App/database/stock_master.csv
 App/database/IPO-PastIssue-*.csv
 App/database/CF-CA-*.csv
 App/database/Company_Name_Changes_NSE.xlsx
